@@ -4,6 +4,7 @@ import java.sql.Date;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 
@@ -38,7 +39,7 @@ public class UserLoanService {
 		return employeeCardDetailsRepository.getActiveLoans(employeeId).stream()
 				.map(details -> new ViewLoansResponse(details.getEmployeeCardDetailsId().getLoanCardMaster(),
 						details.getCardIssueDate()))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	/*
